Fix z-index issue with the drop down on the title bar

--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -2,13 +2,11 @@
     width: 100%;
     padding: 5px 0;
     background-color: #eeeeee;
-    overflow: hidden;
+    position: relative;
 }
 .title-bar .left-menu {
-    float: left;
 }
 .title-bar .right-menu {
-    float: right;
 }
 .title-bar .menu-bar {
 }
